--- a/index.html
+++ b/index.html
@@ -24,13 +24,24 @@
     </div>
 </header>
 
-<!-- HERO SECTION -->
-<video
-  id="heroVideo"
-  muted
-  playsinline
-  preload="auto"
-></video>
+<section id="home" class="hero">
+  <video
+    id="heroVideo"
+    autoplay
+    muted
+    loop
+    playsinline
+  ></video>
+
+  <div class="hero-overlay"></div>
+
+  <div class="hero-content">
+    <h1>Transform Your Body. Build Strength. Live Elite.</h1>
+    <p>Personalized online fitness coaching backed by science and consistency.</p>
+    <a href="#contact" class="btn">Start Your Fitness Journey</a>
+  </div>
+</section>
+
 
 
 
@@ -157,4 +168,5 @@
 
   loadVideo(index);
 </script>
+
 
