--- a/index.html
+++ b/index.html
@@ -142,31 +142,19 @@
     "videos/hero3.mp4"
   ];
 
-  let index = 0;
+  let current = 0;
   const video = document.getElementById("heroVideo");
 
-  function loadVideo(i) {
-    video.src = videos[i];
+  function playNext() {
+    video.src = videos[current];
     video.load();
-
-    const playPromise = video.play();
-    if (playPromise !== undefined) {
-      playPromise.catch(() => {
-        document.body.addEventListener(
-          "touchstart",
-          () => video.play(),
-          { once: true }
-        );
-      });
-    }
+    video.play().catch(() => {});
+    current = (current + 1) % videos.length;
   }
 
-  video.onended = () => {
-    index = (index + 1) % videos.length;
-    loadVideo(index);
-  };
-
-  loadVideo(index);
+  video.addEventListener("ended", playNext);
+  playNext();
 </script>
+
 
 
