--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 <body>
 
 <!-- NAVBAR -->
-<header>
-    <div class="logo">
-  <img src="logo.png" alt="SK Elite Fitness Logo">
-  <span>SK Elite Fitness</span>
-</div>
+<header class="navbar">
+  <div class="nav-left">
+    <img src="logo.png" class="logo-img" alt="SK Elite Fitness">
+    <span class="brand">SK Elite Fitness</span>
+  </div>
 
-            <a href="#home">Home</a>
-            <a href="#services">Services</a>
-            <a href="#about">About</a>
-            <a href="#programs">Programs</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </div>
+  <div class="menu-icon" onclick="toggleMenu()">☰</div>
+
+  <nav class="nav-links" id="navLinks">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#services">Services</a>
+    <a href="blog.html">Blog</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
+
 
 <section id="home" class="hero">
   <section class="hero" id="home">
@@ -145,6 +148,7 @@
     slides[current].classList.add('active');
   }, 4000);
 </script>
+
 
 
 
