--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>SK Elite Fitness | Online Fitness Coaching</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    
+<script>
+function toggleMenu() {
+  document.getElementById("navLinks").classList.toggle("show");
+}
+</script>
+
 <body>
 
 <!-- NAVBAR -->
@@ -148,6 +155,7 @@
     slides[current].classList.add('active');
   }, 4000);
 </script>
+
 
 
 
