--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 <!-- ================= HERO SECTION ================= -->
 <section class="hero" id="home">
   <div class="slider">
-    <img src="images/hero1.jpg" class="slide active">
-    <img src="images/hero2.jpg" class="slide">
-    <img src="images/hero3.jpg" class="slide">
+    <img src="images/hero1.png">
+" class="slide active">
+    <img src="images/hero2.png">
+ class="slide">
+    <img src="images/hero3.png">
+ class="slide">
   </div>
 
   <div class="hero-text">
@@ -127,4 +130,5 @@ setInterval(() => {
 
 </body>
 </html>
+
 
