--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SK Elite Fitness</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+
+  <!-- HEADER -->
+  <header class="header">
+    <div class="logo">SK ELITE FITNESS</div>
+    <a href="https://wa.me/919635493218" class="cta-btn">WhatsApp</a>
+  </header>
+
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <div class="hero-text animate">
+      <h1>DISCIPLINE. STRENGTH. RESULTS.</h1>
+      <p>Hardcore fitness coaching for people who want real transformation.</p>
+      <a href="https://wa.me/919635493218" class="hero-btn">Start Now</a>
+    </div>
+
+    <div class="hero-images">
+      <img src="images/hero1.jpg" class="hero-img move-left" alt="Fitness training">
+      <img src="images/hero2.jpg" class="hero-img move-right" alt="Workout">
+      <img src="images/hero3.jpg" class="hero-img move-up" alt="Strength">
+    </div>
+  </section>
+
+  <!-- ABOUT -->
+  <section class="about animate">
+    <h2>WHY SK ELITE FITNESS</h2>
+    <p>
+      This is not motivation. This is discipline.  
+      We build bodies through consistency, structure, and hard work.
+    </p>
+  </section>
+
+  <!-- SERVICES -->
+  <section class="services">
+    <div class="service-card animate">
+      <h3>Strength Training</h3>
+      <p>Build raw power and muscle with structured training.</p>
+    </div>
+
+    <div class="service-card animate">
+      <h3>Fat Loss</h3>
+      <p>Lose fat the right way without destroying your health.</p>
+    </div>
+
+    <div class="service-card animate">
+      <h3>Lifestyle Coaching</h3>
+      <p>Habits, mindset, discipline – transformation beyond the gym.</p>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2026 SK Elite Fitness. All rights reserved.</p>
+  </footer>
+
+  <!-- JS -->
+  <script src="js/main.js"></script>
+</body>
+</html>
 
