--- a/index.html
+++ b/index.html
@@ -1,71 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>SK Elite Fitness</title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css" />
+  <!-- IMPORTANT FOR MOBILE -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-  <!-- HEADER -->
-  <header class="header">
-    <div class="logo">SK ELITE FITNESS</div>
-    <a href="https://wa.me/919635493218" class="cta-btn">WhatsApp</a>
+  <header>
+    <h1>SK Elite Fitness</h1>
+    <p>Transform your body, confidence, and discipline</p>
   </header>
 
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <div class="hero-text animate">
-      <h1>DISCIPLINE. STRENGTH. RESULTS.</h1>
-      <p>Hardcore fitness coaching for people who want real transformation.</p>
-      <a href="https://wa.me/919635493218" class="hero-btn">Start Now</a>
-    </div>
-
-    <div class="hero-images">
-      <img src="images/hero1.jpg" class="hero-img move-left" alt="Fitness training">
-      <img src="images/hero2.jpg" class="hero-img move-right" alt="Workout">
-      <img src="images/hero3.jpg" class="hero-img move-up" alt="Strength">
-    </div>
-  </section>
-
-  <!-- ABOUT -->
-  <section class="about animate">
-    <h2>WHY SK ELITE FITNESS</h2>
+  <section>
+    <h2>About the Coach</h2>
     <p>
-      This is not motivation. This is discipline.  
-      We build bodies through consistency, structure, and hard work.
+      Hi, I’m Srikanth — founder of SK Elite Fitness.  
+      I help people build strength, lose fat, and stay consistent.
     </p>
   </section>
 
-  <!-- SERVICES -->
-  <section class="services">
-    <div class="service-card animate">
-      <h3>Strength Training</h3>
-      <p>Build raw power and muscle with structured training.</p>
-    </div>
-
-    <div class="service-card animate">
-      <h3>Fat Loss</h3>
-      <p>Lose fat the right way without destroying your health.</p>
-    </div>
-
-    <div class="service-card animate">
-      <h3>Lifestyle Coaching</h3>
-      <p>Habits, mindset, discipline – transformation beyond the gym.</p>
-    </div>
+  <section>
+    <h2>Our Services</h2>
+    <ul>
+      <li>Strength Training</li>
+      <li>Fat Loss Transformation</li>
+      <li>Lifestyle Coaching</li>
+    </ul>
   </section>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2026 SK Elite Fitness. All rights reserved.</p>
-  </footer>
+  <section>
+    <h2>Get Started</h2>
+    <p>Message us on WhatsApp to begin your transformation.</p>
+  </section>
 
-  <!-- JS -->
-  <script src="js/main.js"></script>
 </body>
 </html>
-
