--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 <body>
 
   <header>
+    <header class="hero">
+  <img src="images/hero.jpg" alt="SK Elite Fitness">
+  <div class="hero-text">
     <h1>SK Elite Fitness</h1>
     <p>Transform your body, confidence, and discipline</p>
-  </header>
+  </div>
+</header>
+
 
   <section>
     <h2>About the Coach</h2>
