--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
   </section>
 
   <section>
-    <h2>Get Started</h2>
-    <p>Message us on WhatsApp to begin your transformation.</p>
-  </section>
+    <section>
+  <h2>Get Started</h2>
+  <p>Message us on WhatsApp to begin your transformation.</p>
+
+  <a href="https://wa.me/919635493218" class="whatsapp">
+    Chat on WhatsApp
+  </a>
+</section>
+
 
 </body>
 </html>
