--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 
 
   <section>
-    <h2>About the Coach</h2>
-    <p>
-      Hi, I’m Srikanth — founder of SK Elite Fitness.  
-      I help people build strength, lose fat, and stay consistent.
-    </p>
-  </section>
+    <section>
+  <h2>Get Started</h2>
+  <p>Message us on WhatsApp to begin your transformation.</p>
+
+  <a class="whatsapp" href="https://wa.me/919635493218">
+    Chat on WhatsApp
+  </a>
+</section>
+
 
   <section>
     <h2>Our Services</h2>
