Update stylesheet link path in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>SK Elite Fitness</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+
 </head>
 <body>
 
