Update WhatsApp button with new link and class

--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
   </footer>
 
   <!-- WhatsApp Floating Button -->
-  <a href="https://wa.me/919635493218" class="whatsapp-float">Chat on WhatsApp</a>
+  <a
+  href="https://wa.me/9635493218"
+  class="btn-whatsapp"
+  target="_blank"
+>
+  Start on WhatsApp
+</a>
+
 
 </body>
 </html>
