Add WhatsApp floating button to index.html

--- a/index.html
+++ b/index.html
@@ -68,5 +68,12 @@
 </a>
 
 
-</body>
+</body><a
+  href="https://wa.me/9635493218"
+  class="floating-whatsapp"
+  target="_blank"
+>
+  💬
+</a>
+
 </html>
