--- a/index.html
+++ b/index.html
@@ -1,79 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SK Elite Fitness</title>
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="./css/style.css" />
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SK Elite Fitness | Professional Online Coaching</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-  <!-- HERO SECTION -->
-  <header class="hero">
-    <div class="hero-overlay"></div>
-    <div class="hero-content">
-      <h1>SK Elite Fitness</h1>
-      <p>Transform your body, confidence, and discipline</p>
-      <a href="https://wa.me/919635493218" class="btn-primary">Start on WhatsApp</a>
-    </div>
-  </header>
+    <nav class="navbar">
+        <div class="logo">SK ELITE FITNESS</div>
+        <ul class="nav-links">
+            <li><a href="train.html">Train With Me</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="membership.html" class="btn-highlight">Membership</a></li>
+            <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+        <div class="hamburger">
+            <i class="fas fa-bars"></i>
+        </div>
+    </nav>
 
-  <!-- ABOUT -->
-  <section class="about">
-    <h2>About the Coach</h2>
-    <p>
-      Hi, I’m Srikanth — founder of SK Elite Fitness.  
-      I help people build strength, lose fat, and stay consistent through
-      structured training and disciplined lifestyle coaching.
-    </p>
-  </section>
+    <header class="hero-section">
+        <div class="hero-slider">
+            <div class="slide active" style="background-image: url('images/slide1.jpg');"></div>
+            <div class="slide" style="background-image: url('images/slide2.jpg');"></div>
+            <div class="slide" style="background-image: url('images/slide3.jpg');"></div>
+        </div>
+        
+        <div class="hero-content">
+            <h1>TRANSFORM YOUR BODY</h1>
+            <p>Strength • Cardio • DMT • Freestyle</p>
+            <a href="membership.html" class="cta-button">TRY NOW / FIND OUT MORE</a>
+        </div>
+    </header>
 
-  <!-- SERVICES -->
-  <section class="services">
-    <h2>Our Services</h2>
+    <section class="insta-bar">
+        <div class="insta-content">
+            <p>Follow the journey on Instagram for daily tips</p>
+            <a href="https://instagram.com/yourhandle" target="_blank" class="insta-btn">
+                <i class="fab fa-instagram"></i> @sk_elitefitness
+            </a>
+        </div>
+    </section>
 
-    <div class="service-cards">
-      <div class="card">
-        <h3>Strength Training</h3>
-        <p>Build lean muscle and real-world strength using science-based programs.</p>
-      </div>
+    <section class="hero-story">
+        <div class="container">
+            <h2>MY STORY</h2>
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p>Making fitness available to everyone. From strength training to freestyle, we build elite physiques.</p>
+        </div>
+    </section>
 
-      <div class="card">
-        <h3>Fat Loss Transformation</h3>
-        <p>Sustainable fat loss with training, nutrition, and accountability.</p>
-      </div>
+    <footer>
+        <div class="footer-links">
+            <a href="about.html">About Us</a>
+            <a href="membership.html">Membership</a>
+            <a href="policies.html">Policies</a>
+            <a href="terms.html">Terms & Conditions</a>
+        </div>
+        <div class="copyright">
+            &copy; 2026 SK Elite Fitness. All Rights Reserved.
+        </div>
+    </footer>
 
-      <div class="card">
-        <h3>Lifestyle Coaching</h3>
-        <p>Habits, mindset, discipline, and long-term consistency.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2026 SK Elite Fitness</p>
-  </footer>
-
-  <!-- WhatsApp Floating Button -->
-  <a
-  href="https://wa.me/9635493218"
-  class="btn-whatsapp"
-  target="_blank"
->
-  Start on WhatsApp
-</a>
-
-
-</body><a
-  href="https://wa.me/9635493218"
-  class="floating-whatsapp"
-  target="_blank"
->
-  💬
-</a>
-
+    <script src="script.js"></script>
+</body>
 </html>
