Add training section with various workout cards

--- a/train.html
+++ b/train.html
@@ -1,1 +1,93 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Train With Me | SK Elite Fitness</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
 
+    <nav class="navbar">
+        <div class="logo">SK ELITE FITNESS</div>
+        <ul class="nav-links">
+            <li><a href="train.html" class="active-page">Train With Me</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="membership.html" class="btn-highlight">Membership</a></li>
+            <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+        <div class="hamburger"><i class="fas fa-bars"></i></div>
+    </nav>
+
+    <header class="page-header">
+        <h1>TRAIN WITH ME</h1>
+        <p>Choose your discipline. Master your body.</p>
+    </header>
+
+    <section class="training-grid-section">
+        <div class="container">
+            
+            <div class="training-card">
+                <div class="card-image" style="background-image: url('images/strength.jpg');"></div>
+                <div class="card-content">
+                    <h3>Strength Training</h3>
+                    <p>Build muscle density and power with compound movements.</p>
+                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="training-card">
+                <div class="card-image" style="background-image: url('images/weightloss.jpg');"></div>
+                <div class="card-content">
+                    <h3>Weight Loss</h3>
+                    <p>High-intensity programs designed to burn fat rapidly.</p>
+                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="training-card">
+                <div class="card-image" style="background-image: url('images/cardio.jpg');"></div>
+                <div class="card-content">
+                    <h3>Cardio Endurance</h3>
+                    <p>Boost your stamina and heart health.</p>
+                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="training-card">
+                <div class="card-image" style="background-image: url('images/dmt.jpg');"></div>
+                <div class="card-content">
+                    <h3>DMT</h3>
+                    <p>Dynamic Movement Training for 3D functional strength.</p>
+                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="training-card">
+                <div class="card-image" style="background-image: url('images/freestyle.jpg');"></div>
+                <div class="card-content">
+                    <h3>Freestyle</h3>
+                    <p>Creative workouts using bodyweight and unique props.</p>
+                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="training-card">
+                <div class="card-image" style="background-image: url('images/yoga.jpg');"></div>
+                <div class="card-content">
+                    <h3>Yoga & Mobility</h3>
+                    <p>Recover faster and improve flexibility.</p>
+                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <footer>
+        <div class="copyright">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
+    </footer>
+
+</body>
+</html>
