--- a/train.html
+++ b/train.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav class="navbar">
-        <div class="logo">SK ELITE FITNESS</div>
+        <a href="index.html" class="logo">SK ELITE FITNESS</a>
         <ul class="nav-links">
             <li><a href="train.html" class="active-page">Train With Me</a></li>
             <li><a href="services.html">Services</a></li>
