--- a/train.html
+++ b/train.html
@@ -14,7 +14,7 @@
         <ul class="nav-links">
             <li><a href="train.html" class="active-page">Train With Me</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="membership.html" class="btn-highlight">Membership</a></li>
+            <li><a href="membership.html">Membership</a></li>
             <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
@@ -32,8 +32,8 @@
                 <div class="card-image" style="background-image: url('images/strength.jpg');"></div>
                 <div class="card-content">
                     <h3>Strength Training</h3>
-                    <p>Build muscle density and power with compound movements.</p>
-                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                    <p>Build muscle density and power.</p>
+                    <a href="strength-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -41,8 +41,8 @@
                 <div class="card-image" style="background-image: url('images/weightloss.jpg');"></div>
                 <div class="card-content">
                     <h3>Weight Loss</h3>
-                    <p>High-intensity programs designed to burn fat rapidly.</p>
-                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                    <p>High-intensity fat burning programs.</p>
+                    <a href="weightloss-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
                 <div class="card-content">
                     <h3>Cardio Endurance</h3>
                     <p>Boost your stamina and heart health.</p>
-                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                    <a href="cardio-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -59,8 +59,8 @@
                 <div class="card-image" style="background-image: url('images/dmt.jpg');"></div>
                 <div class="card-content">
                     <h3>DMT</h3>
-                    <p>Dynamic Movement Training for 3D functional strength.</p>
-                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                    <p>Dynamic 3D functional strength.</p>
+                    <a href="dmt-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -68,8 +68,8 @@
                 <div class="card-image" style="background-image: url('images/freestyle.jpg');"></div>
                 <div class="card-content">
                     <h3>Freestyle</h3>
-                    <p>Creative workouts using bodyweight and unique props.</p>
-                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                    <p>Creative bodyweight workouts.</p>
+                    <a href="freestyle-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                 <div class="card-content">
                     <h3>Yoga & Mobility</h3>
                     <p>Recover faster and improve flexibility.</p>
-                    <a href="membership.html" class="text-link">VIEW PLANS <i class="fas fa-arrow-right"></i></a>
+                    <a href="yoga-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
     </section>
 
     <footer>
-        <div class="copyright">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
+        <div class="copyright">&copy; 2026 SK Elite Fitness.</div>
     </footer>
 
 </body>
