--- a/train.html
+++ b/train.html
@@ -32,7 +32,7 @@
                 <div class="card-image" style="background-image: url('images/strength.jpg');"></div>
                 <div class="card-content">
                     <h3>Strength Training</h3>
-                    <p>Build muscle density and power.</p>
+                    <p>Build muscle density and power with compound movements.</p>
                     <a href="strength-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                 <div class="card-image" style="background-image: url('images/weightloss.jpg');"></div>
                 <div class="card-content">
                     <h3>Weight Loss</h3>
-                    <p>High-intensity fat burning programs.</p>
+                    <p>High-intensity programs designed to burn fat rapidly.</p>
                     <a href="weightloss-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                 <div class="card-image" style="background-image: url('images/dmt.jpg');"></div>
                 <div class="card-content">
                     <h3>DMT</h3>
-                    <p>Dynamic 3D functional strength.</p>
+                    <p>Dynamic Movement Training for 3D functional strength.</p>
                     <a href="dmt-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="card-image" style="background-image: url('images/freestyle.jpg');"></div>
                 <div class="card-content">
                     <h3>Freestyle</h3>
-                    <p>Creative bodyweight workouts.</p>
+                    <p>Creative workouts using bodyweight and unique props.</p>
                     <a href="freestyle-info.html" class="text-link">READ DETAILS <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -86,7 +86,7 @@
     </section>
 
     <footer>
-        <div class="copyright">&copy; 2026 SK Elite Fitness.</div>
+        <div class="copyright">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
     </footer>
 
 </body>
