--- a/cardio-info.html
+++ b/cardio-info.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cardio Endurance | SK Elite Fitness</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
 
+    <nav class="navbar">
+        <a href="index.html" class="logo">SK ELITE FITNESS</a>
+        <ul class="nav-links">
+            <li><a href="train.html" class="active-page">Train With Me</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+        <div class="hamburger"><i class="fas fa-bars"></i></div>
+    </nav>
+
+    <header class="page-header">
+        <h1>CARDIO ENDURANCE</h1>
+    </header>
+
+    <section class="detail-content" style="padding: 50px 5%; background: white;">
+        <div class="container" style="display:flex; flex-wrap:wrap; gap:40px; align-items: center;">
+            <div style="flex:1; min-width:300px;">
+                <img src="images/cardio.jpg" style="width:100%; border-radius:10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            </div>
+            <div style="flex:1; min-width:300px;">
+                <h2 style="color:#D32F2F; margin-bottom:20px; font-size: 2rem;">Unlimited Stamina</h2>
+                <p style="line-height:1.8; margin-bottom:20px; font-size: 1.1rem; color: #555;">
+                    Improve your heart health and stamina with our specialized endurance training. 
+                    Whether you are training for a marathon or just want to feel more energetic, 
+                    our cardio drills will push your limits safely.
+                </p>
+                <h3 style="margin-bottom:15px;">What You Get:</h3>
+                <ul style="margin-bottom:30px; margin-left:20px; line-height: 1.8;">
+                    <li>Heart Rate Zone Training</li>
+                    <li>Speed & Agility Drills</li>
+                    <li>Endurance Building</li>
+                </ul>
+                <a href="services.html" class="cta-button">START THIS PLAN</a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="copyright">&copy; 2026 SK Elite Fitness. All Rights Reserved.</div>
+    </footer>
+</body>
+</html>
